--- a/css/flex-and-position.css
+++ b/css/flex-and-position.css
@@ -1,41 +1,87 @@
 * {
     box-sizing: border-box;
 }
+
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 1em;
+}
+
 body {
     margin: 0 1em;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.4;
     color: #777;
 }
+
 header, footer {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+
+    padding: .5em 1em;
     background-color: rgb(185, 225, 240);
 }
+
+footer p {
+    margin: .5em;
+}
+
 .logo {
+    flex-grow: 4;
     font-family: monospace;
     font-size: 2em;
     font-weight: bold;
 }
+
 header a {
     text-decoration: none;
     color: #777;
 }
+
+header a:nth-of-type(3) {
+    flex-grow: 1;
+}
+
 main {
     padding-inline: 1em;
 }
-.sticky-container .text {
+
+p {
     text-align: justify;
 }
+
+.sticky-container {
+    display: flex;
+    gap: 20px;
+}
+
+.sticky-container .text {
+    flex-basis: 60%;
+}
+
 .sticky-container .text p {
     padding-block-end: 2em;
     border-block-end: 1px solid lightgrey;
-    margin-block-start: 1em;
+    margin-block-end: 1em;
 }
+
 .sticky-card {
+    display: flex;
+    flex-direction: column;
+
+    flex-basis: 240px;
+    align-self: start;
+
+    min-height: 260px;
+    
     padding: 1em;
     border: 1px solid rgb(226, 226, 226);
     border-radius: 6px;
+    margin: 1em auto;
     box-shadow: 1px 1px 5px #cfcfcf;
 }
+
 .sticky-card h2 {
     margin-block-start: 0;
     margin-block-end: .5em;
@@ -43,6 +89,7 @@ main {
     color:rgb(146, 146, 146);
     text-align: justify;
 }
+
 .sticky-card h3, .modal h3 {
     margin-block-start: 0;
     margin-block-end: .5em;
@@ -53,6 +100,7 @@ main {
     color:rgb(192, 192, 192);
     font-weight: 100;
 }
+
 .sticky-card p, .modal p {
     margin-block-start: 2em;
 
@@ -63,6 +111,7 @@ main {
     text-align: justify;
 
 }
+
 .sticky-card button, .modal .btn-buy {
     height: 2.5em;
     margin-block-start: auto;
@@ -77,12 +126,14 @@ main {
     border-radius: 8px;
     box-shadow: 1px 1px 6px #cfcfcf;
 }
+
 .backdrop {
     background-color: rgb(177, 177, 177, .6);
     
     opacity: 0;
     transition: opacity .8s ease-out;
 }
+
 .modal {
     padding: 1em;
     
@@ -93,6 +144,7 @@ main {
     opacity: 0;
     transition: opacity .8s ease-out;
 }
+
 .modal .btn-close{
     border: 2px solid lightgrey;
     box-shadow: 3px 3px 6px rgb(173 173 173);
